<resources>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="access_dolby_enhanced_app">ACCESS DOLBY ENHANCED APPS</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="app_name">Dolby Atmos</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="balanced">Balanced</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
  <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
  <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
  <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
  <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
  <string name="bright">Bright</string>
  <string name="call_notification_answer_action">Answer</string>
  <string name="call_notification_answer_video_action">Video</string>
  <string name="call_notification_decline_action">Decline</string>
  <string name="call_notification_hang_up_action">Hang Up</string>
  <string name="call_notification_incoming_text">Incoming call</string>
  <string name="call_notification_ongoing_text">Ongoing call</string>
  <string name="call_notification_screening_text">Screening an incoming call</string>
  <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
  <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
  <string name="character_counter_pattern">%1$d/%2$d</string>
  <string name="classic_text">CLASSICS</string>
  <string name="clear_text_end_icon_content_description">Clear text</string>
  <string name="custom">Custom</string>
  <string name="dialogue_enhancer">Dialogue Enhancer</string>
  <string name="dolby_explore_atmos_description">Dolby Atmos creates an amazing mobile headphone experience with multidimensional sound that flows above and around you.</string>
  <string name="dolby_sound">Dolby Sound‏</string>
  <string name="dynamic">Dynamic</string>
  <string name="dynamic_description">Dolby Sound identifies the content and performs automatic adjustments to deliver the best sound.</string>
  <string name="error_a11y_label">Error: invalid</string>
  <string name="error_icon_content_description">Error</string>
  <string name="experience_dolby_description">Immerse yourself with applications and games that incorporate Dolby Audio. Whether you use headphones or built-in speakers, dialogue is more clear and volume levels are more balanced, pulling you deeper into the experience.</string>
  <string name="experience_dolby_enhanced_apps">EXPERIENCE DOLBY ENHANCED APPS</string>
  <string name="explore_dolby">Explore Dolby</string>
  <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
  <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
  <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
  <string name="far">Far</string>
  <string name="graphic_equalizer">Graphic Equalizer</string>
  <string name="hdmi_connected_text">Dolby Sound Processing does not support HDMI on mobile devices. When an HDMI end point is connected, Dolby Sound Processing controls are temporarily disabled.</string>
  <string name="headphone_mode_disable_text">Plug in a headset to enable this mode.</string>
  <string name="headset">Headset</string>
  <string name="help_intelligent_tone">Mode-based Intelligent Tone</string>
  <string name="help_reduce_reverberation_text">Reducing reverberation can improve the clarity of speech. Adjust the bar to reduce reverberation.</string>
  <string name="help_stereo_wideing_text">Stereo Widening enables you to experience more spaciousness in video content that you watch over headphones.</string>
  <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
  <string name="icon_content_description">Dialog Icon</string>
  <string name="intelligent_tone">Intelligent Tone</string>
  <string name="item_view_role_description">Tab</string>
  <string name="learn_more">LEARN MORE</string>
  <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
  <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
  <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
  <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
  <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
  <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
  <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
  <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
  <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
  <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
  <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
  <string name="material_clock_display_divider">:</string>
  <string name="material_clock_toggle_content_description">Select AM or PM</string>
  <string name="material_hour_selection">Select hour</string>
  <string name="material_hour_suffix">%1$s o'clock</string>
  <string name="material_minute_selection">Select minutes</string>
  <string name="material_minute_suffix">%1$s minutes</string>
  <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
  <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
  <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
  <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
  <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
  <string name="material_slider_range_end">Range end,</string>
  <string name="material_slider_range_start">Range start,</string>
  <string name="material_timepicker_am">AM</string>
  <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
  <string name="material_timepicker_hour">Hour</string>
  <string name="material_timepicker_minute">Minute</string>
  <string name="material_timepicker_pm">PM</string>
  <string name="material_timepicker_select_time">Select time</string>
  <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
  <string name="middle">Middle</string>
  <string name="movie">Movie</string>
  <string name="movie_description">Authentic surround sound and clearer dialogue for the full impact of movies and TV shows.</string>
  <string name="mtrl_badge_numberless_content_description">New notification</string>
  <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
  <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
  <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
  <string name="mtrl_picker_a11y_next_month">Change to next month</string>
  <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
  <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
  <string name="mtrl_picker_cancel">Cancel</string>
  <string name="mtrl_picker_confirm">OK</string>
  <string name="mtrl_picker_date_header_selected">%1$s</string>
  <string name="mtrl_picker_date_header_title">Select Date</string>
  <string name="mtrl_picker_date_header_unselected">Selected date</string>
  <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
  <string name="mtrl_picker_invalid_format">Invalid format.</string>
  <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
  <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
  <string name="mtrl_picker_invalid_range">Invalid range.</string>
  <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
  <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
  <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
  <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
  <string name="notification_goto_settings">Go to settings</string>
  <string name="notification_profile">Dynamic profile is on.</string>
  <string name="reset">Reset</string>
  <string name="reset_cancel">Cancel</string>
  <string name="reset_profile">RESET PROFILE</string>
  <string name="reset_profile_desc">Reset button will reset all settings under the current profile, including both phone mode and headset mode.</string>
  <string name="reset_profile_desc_ask">Do you still want to do it?</string>
  <string name="tooltip_ieq_balanced_text">Balanced: Equal levels of bass and treble.</string>
  <string name="tooltip_ieq_bright_text">Bright: Emphasis on the treble to bring out fine details in the instruments.</string>
  <string name="tooltip_ieq_endpoint_text">Once we detect you are using headsets, we will automatically activate headset mode for a better audio experience.</string>
  <string name="tooltip_ieq_no_effect_text">No effect: Original sound without any adjustments.</string>
  <string name="tooltip_ieq_text">The Intelligent Tone analyzes and dynamically adjusts the audio to match a desired tone.</string>
  <string name="tooltip_ieq_warm_text">Warm: Emphasis on the bass to give a fuller sound.</string>
  <string name="what_is_new">What's NEW</string>
</resources>