<?xml version='1.0' encoding='utf-8' ?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/reset_help_content"
                      android:background="@drawable/help_background"
                      android:focusable="true"
                      android:fitsSystemWindows="false"
                      android:clickable="true"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:daxappui2="http://schemas.android.com/apk/res-auto">
  <TextView android:id="@id/reset_help_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110.0dp"
            android:text="@string/reset_profile"
            android:layout_marginStart="32.0dp"
            daxappui2:layout_constraintStart_toStartOf="parent"
            daxappui2:layout_constraintTop_toTopOf="parent"
            style="@style/HelpTitleTextStyle" />
  <TextView android:id="@id/reset_help_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dp"
            android:text="@string/reset_profile_desc"
            android:layout_marginStart="32.0dp"
            android:layout_marginEnd="10.0dp"
            daxappui2:layout_constraintEnd_toEndOf="parent"
            daxappui2:layout_constraintStart_toStartOf="parent"
            daxappui2:layout_constraintTop_toBottomOf="@id/reset_help_title"
            style="@style/HelpDescTextStyle" />
  <TextView android:id="@id/reset_profile_desc_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dp"
            android:text="@string/reset_profile_desc_ask"
            android:layout_marginStart="32.0dp"
            daxappui2:layout_constraintStart_toStartOf="parent"
            daxappui2:layout_constraintTop_toBottomOf="@id/reset_help_desc"
            style="@style/HelpDescTextStyle" />
  <TextView android:id="@id/help_reset_button"
            android:paddingTop="8.0dp"
            android:paddingBottom="8.0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dp"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:layout_marginEnd="32.0dp"
            daxappui2:layout_constraintEnd_toEndOf="parent"
            daxappui2:layout_constraintTop_toBottomOf="@id/reset_profile_desc_ask"
            style="@style/HelpButtonTextStyle" />
  <TextView android:id="@id/help_cancel_button"
            android:paddingTop="8.0dp"
            android:paddingBottom="8.0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dp"
            android:text="@string/reset_cancel"
            android:textAllCaps="true"
            android:layout_marginEnd="20.0dp"
            daxappui2:layout_constraintEnd_toStartOf="@id/help_reset_button"
            daxappui2:layout_constraintTop_toBottomOf="@id/reset_profile_desc_ask"
            style="@style/HelpButtonTextStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>