<?xml version='1.0' encoding='utf-8' ?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@android:color/system_neutral1_900"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <TextView android:textSize="24.0sp"
            android:textColor="#ededed"
            android:id="@id/dolby_atmos_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38.0dp"
            android:text="@string/app_name"
            android:fontFamily="@font/avenirltstd_light"
            android:layout_marginStart="72.0dp"
            android:letterSpacing="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
  <TextView android:textSize="13.0sp"
            android:textColor="#ccededed"
            android:id="@id/dolby_atmos_details_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.0dp"
            android:text="@string/dolby_explore_atmos_description"
            android:lineSpacingExtra="7.0dp"
            android:fontFamily="@font/avenirltstd_book"
            android:layout_marginStart="72.0dp"
            android:layout_marginEnd="24.0dp"
            android:letterSpacing="-0.015"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dolby_atmos_text" />
  <TextView android:textSize="13.0sp"
            android:textColor="#ccededed"
            android:id="@id/learn_more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28.0dp"
            android:text="@string/learn_more"
            android:lineSpacingExtra="7.0dp"
            android:fontFamily="@font/avenirltstd_book"
            android:layout_marginStart="72.0dp"
            android:letterSpacing="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dolby_atmos_details_text" />
  <TextView android:textSize="24.0sp"
            android:textColor="#ededed"
            android:id="@id/experience_dolby_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60.0dp"
            android:text="@string/experience_dolby_enhanced_apps"
            android:fontFamily="@font/avenirltstd_light"
            android:layout_marginStart="72.0dp"
            android:layout_marginEnd="24.0dp"
            android:letterSpacing="0.08"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/learn_more_text" />
  <TextView android:textSize="13.0sp"
            android:textColor="#ccededed"
            android:id="@id/experience_dolby_details_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dp"
            android:text="@string/experience_dolby_description"
            android:lineSpacingExtra="7.0dp"
            android:fontFamily="@font/avenirltstd_book"
            android:layout_marginStart="72.0dp"
            android:layout_marginEnd="24.0dp"
            android:letterSpacing="-0.015"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/experience_dolby_text" />
  <TextView android:textSize="13.0sp"
            android:textColor="#ccededed"
            android:ellipsize="end"
            android:id="@id/access_dolby_enhanced_app"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28.0dp"
            android:text="@string/access_dolby_enhanced_app"
            android:maxLines="2"
            android:lineSpacingExtra="7.0dp"
            android:fontFamily="@font/avenirltstd_book"
            android:layout_marginStart="72.0dp"
            android:layout_marginEnd="24.0dp"
            android:letterSpacing="0.077"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/experience_dolby_details_text" />
</androidx.constraintlayout.widget.ConstraintLayout>