<?xml version='1.0' encoding='utf-8' ?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/help_content"
                      android:background="@drawable/help_background"
                      android:focusable="true"
                      android:fitsSystemWindows="false"
                      android:clickable="true"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
  <ImageView android:id="@id/help_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="42.0dp"
             android:src="@drawable/ic_close"
             android:layout_marginEnd="32.0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
  <TextView android:id="@id/device_mode_help_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110.0dp"
            android:text="@string/what_is_new"
            android:layout_marginStart="32.0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/HelpTitleTextStyle" />
  <TextView android:id="@id/device_mode_help_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14.0dp"
            android:text="@string/help_intelligent_tone"
            app:layout_constraintStart_toStartOf="@id/device_mode_help_title"
            app:layout_constraintTop_toBottomOf="@id/device_mode_help_title"
            style="@style/HelpSubTitleTextStyle" />
  <TextView android:id="@id/device_mode_help_text_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dp"
            android:text="@string/tooltip_ieq_text"
            android:layout_marginStart="32.0dp"
            android:layout_marginEnd="12.0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_mode_help_text_1"
            style="@style/HelpDescTextStyle" />
  <TextView android:id="@id/device_mode_help_text_3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.0dp"
            android:text="@string/tooltip_ieq_endpoint_text"
            android:layout_marginStart="32.0dp"
            android:layout_marginEnd="12.0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_mode_help_text_2"
            style="@style/HelpDescTextStyle" />
  <ImageView android:id="@id/help_ieq_dot_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/help_ieq_dot"
             android:baseline="7.0dp"
             android:layout_marginStart="10.0dp"
             app:layout_constraintBaseline_toBaselineOf="@id/help_ieq_no_effect"
             app:layout_constraintBottom_toBottomOf="@id/help_ieq_no_effect"
             app:layout_constraintStart_toStartOf="@id/device_mode_help_title" />
  <TextView android:id="@id/help_ieq_no_effect"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dp"
            android:text="@string/tooltip_ieq_no_effect_text"
            android:layout_marginStart="6.0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/help_ieq_dot_1"
            app:layout_constraintTop_toBottomOf="@id/device_mode_help_text_3"
            style="@style/HelpDescTextStyle" />
  <ImageView android:id="@id/help_ieq_dot_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/help_ieq_dot"
             android:baseline="7.0dp"
             android:layout_marginStart="10.0dp"
             app:layout_constraintBaseline_toBaselineOf="@id/help_ieq_balanced"
             app:layout_constraintBottom_toBottomOf="@id/help_ieq_balanced"
             app:layout_constraintStart_toStartOf="@id/device_mode_help_title" />
  <TextView android:id="@id/help_ieq_balanced"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dp"
            android:text="@string/tooltip_ieq_balanced_text"
            android:layout_marginStart="6.0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/help_ieq_dot_2"
            app:layout_constraintTop_toBottomOf="@id/help_ieq_no_effect"
            style="@style/HelpDescTextStyle" />
  <ImageView android:id="@id/help_ieq_dot_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/help_ieq_dot"
             android:baseline="7.0dp"
             android:layout_marginStart="10.0dp"
             app:layout_constraintBaseline_toBaselineOf="@id/help_ieq_warm"
             app:layout_constraintBottom_toBottomOf="@id/help_ieq_warm"
             app:layout_constraintStart_toStartOf="@id/device_mode_help_title" />
  <TextView android:id="@id/help_ieq_warm"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dp"
            android:text="@string/tooltip_ieq_warm_text"
            android:layout_marginStart="6.0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/help_ieq_dot_3"
            app:layout_constraintTop_toBottomOf="@id/help_ieq_balanced"
            style="@style/HelpDescTextStyle" />
  <ImageView android:id="@id/help_ieq_dot_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/help_ieq_dot"
             android:baseline="7.0dp"
             android:layout_marginStart="10.0dp"
             app:layout_constraintBaseline_toBaselineOf="@id/help_ieq_bright"
             app:layout_constraintBottom_toBottomOf="@id/help_ieq_bright"
             app:layout_constraintStart_toStartOf="@id/device_mode_help_title" />
  <TextView android:id="@id/help_ieq_bright"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.0dp"
            android:text="@string/tooltip_ieq_bright_text"
            android:layout_marginStart="6.0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/help_ieq_dot_4"
            app:layout_constraintTop_toBottomOf="@id/help_ieq_warm"
            style="@style/HelpDescTextStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>